# PasteMate

./: .coveragerc  .dockerignore  .gitignore  README.md  SCREENSHOTS.md  compose.override.yml.example  compose.yml  conftest.py  editor.js  justfile  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.cfg  setup_demo.sh
.github/workflows/: python-app.yml
accounts/: forms.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_preferences.py  0003_alter_preferences_default_syntax.py  0004_alter_preferences_default_syntax.py  0005_alter_preferences_default_syntax.py
accounts/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
assets_build/: editor.js  rollup.config.js
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
containers/: entrypoint.sh  start.sh
demo/: generate_pastes.py  reset_db.py  reset_test_account.py  setup_admin_account.py  setup_demo.sh
pastemate/: Dockerfile  conftest.py  manage.py
pastemate/accounts/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py  views_api.py
pastemate/accounts/fixtures/: users.json
pastemate/accounts/management/commands/: reset_test_user.py  setup_admin.py
pastemate/accounts/migrations/: 0001_initial.py  0003_alter_preferences_default_syntax.py  0004_alter_preferences_default_syntax.py  0006_rename_default_expiration_interval_symbol_preferences_default_expiration_symbol.py  0007_alter_user_avatar.py  0008_preferences_layout_width.py  0009_preferences_paste_font_size.py  0010_alter_preferences_paste_font_size.py
pastemate/accounts/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
pastemate/config/: urls.py
pastemate/config/settings/: base.py  local.py  production.py  test.py
pastemate/core/: apps.py  utils.py  views_api.py
pastemate/core/management/commands/: reset_db.py
pastemate/demo/: apps.py  demo_base_template.html  setup_demo.sh
pastemate/demo/management/commands/: generate_demo_pastes.py  reset_test_user.py  setup_admin.py
pastemate/pastes/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py  views_api.py
pastemate/pastes/fixtures/: pastes.json
pastemate/pastes/management/commands/: expire_pastes.py  generate_demo_pastes.py  regenerate_embed_images.py
pastemate/pastes/migrations/: 0001_initial.py  0003_alter_paste_uuid.py  0005_paste_created_paste_modified.py  0007_alter_paste_managers.py  0010_folder_paste_folder.py  0015_rename_pending_report_moderated_paste_is_active_and_more.py  0016_alter_report_moderated.py  0018_alter_folder_options_alter_folder_slug.py  0019_paste_filesize_alter_paste_syntax.py  0020_alter_paste_expiration_time.py  0022_remove_paste_expiration_time_paste_expiration_date_and_more.py  0024_alter_paste_syntax.py  0025_rename_expiration_interval_symbol_paste_expiration_symbol.py  0026_alter_paste_password.py  0027_alter_paste_title.py
pastemate/pastes/templatetags/: pastes_tags.py
pastemate/pastes/tests/: conftest.py  test_admin.py  test_commands.py  test_forms.py  test_models.py  test_urls.py  test_views.py
pastemate/pastes/tests/views/: test_archive.py  test_backup_pastes.py  test_clone_paste.py  test_create_paste.py  test_delete_folder.py  test_delete_paste.py  test_download_paste.py  test_edit_folder.py  test_embed_paste.py  test_folder_detail.py  test_paste_detail.py  test_print_paste.py  (+7 more)
pastemate/static/css/: select2-bootstrap5-mdb.css  style.css
pastemate/static/js/: script.js
pastemate/templates/: 403_csrf.html  _base.html
pastemate/templates/_includes/: footer.html  navbar.html  sidebar.html
pastemate/templates/account/: _nav.html  email.html  email_confirm.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key_done.html  signup.html
pastemate/templates/pastes/: detail.html  folder_form.html  form.html  report.html  search_results.html  syntax_languages.html
pastemate_project/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
pastes/: admin.py  choices.py  forms.py  models.py  urls.py  views.py
pastes/management/commands/: expire_pastes.py
pastes/migrations/: 0001_initial.py  0002_paste_uuid_alter_paste_syntax.py  0003_alter_paste_uuid.py  0004_paste_content_html.py  0005_paste_created_paste_modified.py  0006_paste_exposure.py  0007_alter_paste_managers.py  0008_alter_paste_managers.py  0009_alter_paste_options_alter_paste_syntax.py  0010_folder_paste_folder.py  0011_paste_embeddable_image.py  0012_alter_paste_embeddable_image.py  0013_report.py  0014_alter_report_pending.py  0015_rename_pending_report_moderated_paste_is_active_and_more.py  0016_alter_report_moderated.py  0017_alter_folder_name_folder_unique_folder_and_more.py  0018_alter_folder_options_alter_folder_slug.py  0019_paste_filesize_alter_paste_syntax.py  0020_alter_paste_expiration_time.py  0021_alter_paste_expiration_time.py  0022_remove_paste_expiration_time_paste_expiration_date_and_more.py  0023_alter_paste_syntax.py  0024_alter_paste_syntax.py
pastes/templatetags/: pastes_tags.py
pastes/tests/: test_admin.py  test_commands.py  test_models.py  test_urls.py  test_views.py
static/: browserconfig.xml
static/css/: style.css
static/js/: editor.bundle.js  script.js
templates/: 403_csrf.html  404.html  500.html  _base.html
templates/_includes/: avatar_url.html  footer.html  navbar.html  pagination.html  pastes_exposure_icons.html  pastes_search.html  toolbar.js
templates/account/: _nav.html  account_delete.html  avatar_edit.html  email.html  login.html  password_change.html  password_reset_from_key.html  password_set.html  preferences.html  profile_edit.html  signup.html
templates/pastes/: archive.html  create.html  delete.html  detail.html  embed.html  folder_delete.html  form.html  print.html  search_results.html  syntax_languages.html  user_list.html
templates/pastes/sidebar/: my_pastes.html  public_pastes.html
templates/pinax/messages/: inbox.html  message_create.html  thread_confirm_delete.html  thread_detail.html
(+2 files in other folders)
