[tool.poetry]
name = "pastemate"
version = "0.1.0"
description = "Paste app with syntax highlighting"
authors = ["Kacper Stypik <kacperstypik@mailbox.org>"]
license = "GNU GPL v3"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
django-allauth = "^0.50.0"
Pillow = "^9.1.1"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.6"
django-environ = "^0.8.1"
Pygments = "^2.12.0"
django-model-utils = "^4.2.0"
django-hitcount = "^1.3.5"
pinax-messages = "^3.0.0"
django-hcaptcha-field = "^1.3.0"
psycopg2 = "^2.9.3"
gunicorn = "^20.1.0"
django-cleanup = "^6.0.0"
djangorestframework = "^3.13.1"
django-rest-knox = "^4.2.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.4.0"
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-django = "^4.5.2"
coverage = "^6.4.1"
django-coverage-plugin = "^2.0.3"
flake8 = "^4.0.1"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
